[project]
name = "rag-pdf-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pypdf",
    "python-dotenv",
    "gradio",
    "openai",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-text-splitters",
    "langchain-chroma",
    "chromadb",
    "sentence-transformers",
    "tiktoken",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
]